Fixed text alignment

--- a/main.css
+++ b/main.css
@@ -19,7 +19,7 @@ body {
 #random {
   margin-top: 20%;
   margin-bottom: 2%;
-  width: 20%;
+  width: 50%;
 }
 #random a {
     color: #dddddd;
